--- a/backend/package.json
+++ b/backend/package.json
@@ -8,10 +8,12 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.17.3",
     "@google-cloud/vertexai": "^1.7.0",
     "cors": "^2.8.5",
     "csv-parse": "^5.5.0",
-    "express": "^4.19.0"
+    "express": "^4.19.0",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
